--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-test page
+<!DOCTYPE html>
+<html lang="ja">
+ 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sample Amplify App</title>
+</head>
+ 
+<body>
+<h1>Welcome to re:Invent 2018!</h1>
+<p>Enjoy yourself!</p>
+</body>
